style(layout): fix z-index

--- a/src/framework/theme/components/layout/layout.component.scss
+++ b/src/framework/theme/components/layout/layout.component.scss
@@ -23,7 +23,7 @@
       position: fixed;
       left: 0;
       right: 0;
-      z-index: 2;
+      z-index: 100;
     }
   }
 
